# claude-code-config-manage-gui

./: .gitignore  BUILD_GUIDE.md  CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v1.5.0.md  build.bat  build.mjs  build.sh  cargo-config-example.toml  cleanup.bat  config.json  cookies_export_2025-11-01T12-51-59.json  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
claude-config-cli/: .gitignore  BUILD_GUIDE.md  BUILD_README.md  Cargo.toml  QUICKSTART.md  README.md  build-cli-full.sh  build.mjs  package.json
claude-config-cli/.cargo/: config.toml
claude-config-cli/resources/: config.json  init_db.sql
claude-config-cli/resources/config/: CLAUDE.local.md  remove-root-check.sh  show-status.mjs
claude-config-cli/src/: claude_config.rs  config_manager.rs  database.rs  i18n.rs  logger.rs  main.rs  models.rs  settings.rs  webdav.rs
claude-config-cli/src/menu/: account.rs  base_url.rs  directory.rs  logs.rs  mod.rs  settings.rs  switch.rs  webdav.rs
scripts/: install-rust.mjs
src/: i18n.js  i18n_replace.py  index.html  main.js  styles.css  webdav.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: init_db.sql  migrate_env_vars.sql
src-tauri/resources/config/: CLAUDE.local.md  remove-root-check.sh
src-tauri/src/: claude_config.rs  config_manager.rs  database.rs  database_backup.rs  lib.rs  logger.rs  main.rs  models.rs  webdav.rs
